src/MiniJava/Tests/DriverTests/literal_int_overflow.mj
class Main
{
    public static void main()
    {
        int tooBig;
        int tooSmall;
        int ok;

        ok = -2147483648;
        ok = 2147483647;
        tooSmall = -2147483649;
        tooBig = 2147483648;

    }
}